fixed blurry canvas text

--- a/packages/client/src/components/index.css
+++ b/packages/client/src/components/index.css
@@ -6,10 +6,6 @@ body {
   border: 1px solid black;
 }
 
-#new-canvas {
-  border: 1px solid black;
-}
-
 .info {
   display: block;
   width: 90vw;
@@ -121,10 +117,6 @@ input[type='submit'] {
 .text-center {
   margin-top: 1em;
   margin-bottom: 1em;
-}
-
-#canvas {
-  width: 60vw;
 }
 
 #glyphs {
